@@ -1,0 +1,32 @@
+/*
+ *  Copyright 2024 the original author or authors.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+
+package org.spockframework.smoke.mock;
+
+import java.lang.reflect.Type;
+
+import org.spockframework.runtime.extension.IDefaultValueProviderExtension;
+import org.spockframework.util.Nullable;
+
+// tag::sample-implementation[]
+public class MaybeDefaultValueProvider implements IDefaultValueProviderExtension {
+  @Override
+  public @Nullable Object provideDefaultValue(Class<?> type, Type exactType) {
+    if (type == IMaybe.class) {
+      return IMaybe.none();
+    }
+    return null;
+  }
+}
+// end::sample-implementation[]
